fixed up alignment of text and started fixing up supabase for the images in storage

--- a/client/vite-project/src/Components/ProductCard/ProductCard.scss
+++ b/client/vite-project/src/Components/ProductCard/ProductCard.scss
@@ -19,6 +19,7 @@
     padding: 0;
     padding-left: 8px;
     color: white;
+    text-align: center;
   }
 
   .product-card-details {
